# DLM-Watermark

./: .gitignore  README.md  nohup.out  requirements.txt  roc_plot.py  setup.py
additional/: Cargo.toml  README.md
additional/src/: lib.rs
configs/main/Dream/: KGW_dream7b_instruct.yaml  no_watermark_dream7b_instruct.yaml  ourWatermark_dream7b_instruct.yaml
configs/main/DreamOn/: KGW_DreamOn7b_instruct.yaml  no_watermark_DreamOn7b_instruct.yaml  ourWatermark_DreamOn7b_instruct.yaml
configs/main/Llada/: BDLM_llada8b_instruct.yaml  BDLM_llada8b_instruct2.yaml  KGW_llada8b_instruct.yaml  no_watermark_llada8b_instruct.yaml  ourWatermark_llada8b_instruct.yaml
data/infilling/: c4_infilling.jsonl
outputs/: results.json
plots/: delta_plot.py  robust_plot.py  roc_plot.py
scripts/: ablate_watermark.py  batch_run_robustness.py  create_infilling_dataset.py  run_config.py  run_quality_eval.py  run_robustness_eval.py
scripts/bash/: BDLM.sh  KGW.sh  ourWatermark.sh
src/dlm_watermark/: __init__.py  configs.py  constants.py  data_processing.py  utils.py  watermark_eval.py
src/dlm_watermark/models/: dream.py  dream_generation_utils.py  dreamon.py  dreamon_generation_utils.py  llada.py  model.py  model_factory.py
src/dlm_watermark/quality_evaluations/: __init__.py  judge.py  metrics.py  ppl.py
src/dlm_watermark/watermarks/: __init__.py  aar.py  bdlm.py  diffusion_watermark.py  kgw.py  kth.py  order_agnostic.py  random_utils.py  unigram.py  (+2 more)
visualize/: data_for_visualization.py  example.jsonl  font_settings.py  legend_settings.py  visualize.ipynb
(+6 files in other folders)
