[package]
name = "levenshtein_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
numpy = "0.16.2"
pyo3 = { version = "0.16.2", features = ["extension-module"] }
rayon = "1.7.0"
rand = "0.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true       
codegen-units = 1 
debug = false 
panic = "abort" 

[profile.dev]
opt-level = 2  
debug = true     
lto = false      